Added jump-to feature
added jump

--- a/index.html
+++ b/index.html
@@ -23,19 +23,23 @@
 			</div>
 
 			<div class="scroll">
+				<a class="jumper" href="#pliip"><img src="images/scroll.svg" width="60px" height="60px"></a>
 			</div>
 
 		</section>
 
+
+
+
 		<footer>
 			<div class="footer-content">
-
+				
 
 				<div class="footer-right">
 
 				</div>
 					<div class="footer-left">
-					<h2>Contact</h2><div class="underline"></div><br>
+					<div id="pliip"><h2>Contact</h2></div><div class="underline"></div><br>
 					<p>3980 Fraser Street</p><p>Vancouver Canada</p><p>V5V 4E4</p>
 					<div class="contact-info">
 						<p>604-428-6850</p>
@@ -43,6 +47,10 @@
 					</div>
 				</div>
 			</div>
+
+			<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+			<script type="text/javascript" src="js/main.js"></script>
+
 		</footer>
 
 
