--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<section class="landing">
 			<div class="logo"></div>
 			<div class="landing-type">
-				<h1>Bringing the traditional Greek Dining experience to Fraser Street</h1>
+				<h1>Bringing the Traditional Greek Dining Experience to Fraser Street</h1>
 				<div class="landing-subheader">
 				<h3>Our chef has designed the menu with each dish served family style, to be shared and enjoyed amongst the table</h3>
 				</div>
