Added more to Nammos New
Full site, mobile fixes

--- a/menu.html
+++ b/menu.html
@@ -38,9 +38,9 @@
 			                    <li>
 			                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Menu <span class="caret"></span></a>
 			                          <ul class="dropdown-menu" role="menu">
-			                            <li><a href="#">Main Menu</a></li>
-			                            <li><a href="#">Drinks</a></li>
-			                            <li><a href="#">Dessert</a></li>
+			                            <li><a href="menu.html">Main Menu</a></li>
+			                            <li><a href="menu.html">Drinks</a></li>
+			                            <li><a href="menu.html">Dessert</a></li>
 			                            <!-- <li><a href="#">LinkedIn</a></li> -->
 			                            <!-- <li><a href="#">Dribble</a></li> -->
 			                          </ul>
