Added new updated site
work completed between hours of 1:30am - 5:00am Monday April 4th 2016

--- a/index.html
+++ b/index.html
@@ -163,18 +163,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-		
-
 		<div class="section5" id="s5">
 
 			<a href="https://www.google.ca/maps/place/3980+Fraser+St,+Vancouver,+BC+V5V+4E4/@49.2494357,-123.092077,17z/data=!3m1!4b1!4m2!3m1!1s0x548673ff396e3871:0xaae26cdbad6d1322" target="_blank"><div class="footer-map"></div></a>
@@ -194,7 +182,7 @@
 			<div class="social-media">
 				<a href="https://www.facebook.com/NammosVan/" target="_blank"><div class="social-icon social-icon-1"></div></a>
 				<a href="https://www.instagram.com/nammosvan/" target="_blank"><div class="social-icon social-icon-2"></div></a>
-				<a href="#"><div class="social-icon social-icon-3"></div></a>
+				<a href="https://twitter.com/NammosVan" target="_blank"><div class="social-icon social-icon-3"></div></a>
 			</div>
 
 		</div>
