--- a/drink.html
+++ b/drink.html
@@ -34,7 +34,7 @@
 		                <ul class="nav navbar-nav navbar-right">
 		                    <li><a href="index.html">Home</a></li> 
 		                    <!-- <li class="active"><a href="menu.html">Menu</a></li> -->
-		                    <li><a href="#">About</a></li>
+		                    <!-- <li><a href="#">About</a></li> -->
 			                    <li>
 			                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Menu <span class="caret"></span></a>
 			                          <ul class="dropdown-menu" role="menu">
@@ -72,7 +72,7 @@
 
 			<div class="section1 menu-section">
 				<div class="s1-title">
-					<h2>Drinks Menu</h2>
+					<h2>Drink Menu</h2>
 					<div class="menu-under"></div>
 				</div>
 					
@@ -429,7 +429,9 @@
 
 <div class="section5" id="s5">
 
+			
 			<a href="https://www.google.ca/maps/place/3980+Fraser+St,+Vancouver,+BC+V5V+4E4/@49.2494357,-123.092077,17z/data=!3m1!4b1!4m2!3m1!1s0x548673ff396e3871:0xaae26cdbad6d1322" target="_blank"><div class="footer-map"></div></a>
+		
 
 			<div class="contact-info">
 				<div class="s5-title">
