--- a/index.html
+++ b/index.html
@@ -32,15 +32,13 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#">Home</a></li> 
                     <!-- <li><a href="menu.html">Menu</a></li> -->
-                    <li><a href="#">About</a></li>
+                    <!-- <li><a href="#">About</a></li> -->
 	                    <li>
 	                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Menu <span class="caret"></span></a>
 	                          <ul class="dropdown-menu" role="menu">
 	                            <li><a href="menu.html">Main Menu</a></li>
-	                            <li><a href="menu.html">Drinks</a></li>
-	                            <li><a href="menu.html">Dessert</a></li>
-	                            <!-- <li><a href="#">LinkedIn</a></li> -->
-	                            <!-- <li><a href="#">Dribble</a></li> -->
+	                            <li><a href="drink.html">Drinks</a></li>
+	                            <li><a href="dessert.html">Dessert</a></li>
 	                          </ul>
 	                    </li>
                     <!-- <li><a href="#">Gallery</a></li> -->
@@ -72,7 +70,7 @@
 		</div>
 
 		<div class="s1-content">
-			<h2>Bringing the traditional Greek dining experience to Fraser Street. Our chef has designed the menu with each dish served family style, to be shared and enjoyed amongst the table</h2>
+			<h2>Bringing the traditional Greek dining experience to Fraser Street. Our chef has designed the menu with each dish served family style, to be shared and enjoyed amongst the table.</h2>
 		</div>
 		
 	</div>
@@ -102,7 +100,7 @@
 
 				<div class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
 					<div class="s2-bucket s2-bucket-1">
-						<a href="menu.html"><div class="s2-icon s2-icon-2"></div></a>
+						<a href="drink.html"><div class="s2-icon s2-icon-2"></div></a>
 						<div class="s2-b-title"><h2><small>Drinks</small></h2></div>
 						<div class="s2-main"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id mauris nec.</p></div>
 					</div>
@@ -110,7 +108,7 @@
 
 				<div class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
 					<div class="s2-bucket s2-bucket-1">
-						<a href="menu.html"><div class="s2-icon s2-icon-3"></div></a>
+						<a href="dessert.html"><div class="s2-icon s2-icon-3"></div></a>
 						<div class="s2-b-title"><h2><small>Dessert</small></h2></div>
 						<div class="s2-main"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id mauris nec purus dapibus.</p></div>
 					</div>
@@ -174,7 +172,10 @@
 				<div class="s5-body">
 					<p>3980 Fraser Street<br>Vancouver BC<br>V5V 4E4</p>
 
-					<p>604-428-6850<br>info@nammos.ca</p>
+					<p>604-428-6850<br></p>
+
+					<a href="mailto:info@nammos.com?subject=Contact Nammos Estiatorio"><p>info@nammos.ca</p></a>
+
 					
 				</div>
 			</div>
