--- a/dessert.html
+++ b/dessert.html
@@ -34,7 +34,7 @@
 		                <ul class="nav navbar-nav navbar-right">
 		                    <li><a href="index.html">Home</a></li> 
 		                    <!-- <li class="active"><a href="menu.html">Menu</a></li> -->
-		                    <li><a href="#">About</a></li>
+		                    <!-- <li><a href="#">About</a></li> -->
 			                    <li>
 			                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Menu <span class="caret"></span></a>
 			                          <ul class="dropdown-menu" role="menu">
