--- a/drink.html
+++ b/drink.html
@@ -440,7 +440,9 @@
 				<div class="s5-body">
 					<p>3980 Fraser Street<br>Vancouver BC<br>V5V 4E4</p>
 
-					<p>604-428-6850<br>info@nammos.ca</p>
+					<p>604-428-6850<br></p>
+
+					<a href="mailto:info@nammos.com?subject=Contact Nammos Estiatorio"><p>info@nammos.ca</p></a>
 					
 				</div>
 			</div>
@@ -448,7 +450,7 @@
 			<div class="social-media">
 				<a href="https://www.facebook.com/NammosVan/" target="_blank"><div class="social-icon social-icon-1"></div></a>
 				<a href="https://www.instagram.com/nammosvan/" target="_blank"><div class="social-icon social-icon-2"></div></a>
-				<a href="https://twitter.com/NammosVan"><div class="social-icon social-icon-3"></div></a>
+				<a href="https://twitter.com/NammosVan" target="_blank"><div class="social-icon social-icon-3"></div></a>
 			</div>
 
 		</div>
