Added menu item
Added missing menu item

--- a/dessert.html
+++ b/dessert.html
@@ -99,8 +99,8 @@
 									</div>
 
 									<div class="m-item m-item-3">
-										<!-- <div class="price"><p><strong>7</strong></p></div> -->
-										<p><strong>Yiaourti me Glyko Koutaliou</strong><br>drained greek yogurt, topped with home made preserves</p>
+										<div class="price"><p><strong>3</strong></p></div>
+										<p>Add a scoup of Ernest Tahitian Vanilla Ice cream</p>
 									</div>
 								
 								</div>
